add log in button

--- a/voting.html
+++ b/voting.html
@@ -12,7 +12,12 @@
 
 	<body>
 	<h1>Derporia: the never-ending land of <del>baseless</del> claims</h1>
-
+	
+	<div class="username">
+	Log In: <input type="text" name="username" placeholder="Username" onkeypress="checkEnter(event)">
+	<br />
+	<button type="button" class="login" name="loginButton" align="right">Log In</button>
+	</div>
 	
 	<table class="mega">
 		<tr>
