--- a/voting.html
+++ b/voting.html
@@ -18,7 +18,26 @@
 	<br />
 	<button type="button" class="login" name="loginButton" align="right">Log In</button>
 	</div>
+	<!--This is where a confirmation would come up that you submitted a claim-->
+	<table class="center">
+					<tbody>
+						<tr>
+							<td>
+								<p class="center"><a href="http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/username.html">UserName</a> just posted:</p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							<p class="center"><b>Claim needs to go here</b></p>
+							<p class="center"><i>Assertion needs to go here</i></p>
+							</td>
+						</tr>
+					</tbody>
+	</table>		
 	
+	<h2>Check out some posts by other users!</h2>
+	
+	<!--END JUST SUBMITTED A CLAIM-->
 	<table class="mega">
 		<tr>
 			<td class="mega">
@@ -33,6 +52,9 @@
 							<td>
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
 							</td>
 						</tr>
 					</tbody>
@@ -70,6 +92,49 @@
 							<td>
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
+							</td>
+						</tr>
+					</tbody>
+					</table>		
+					<table class="center">
+					<tbody><tr>
+						<td>
+						<table width="100%">
+							<tbody><tr>
+							<td align="left">
+								<button type="button" class="red" name="disagree">Disagree</button> 
+							</td>
+							<td align="center">
+								<button type="button" class="yellow" name="unsure">Unsure</button> 
+							</td>
+							<td align="right">
+								<button type="button" class="green" name="convinced">Convinced</button> 
+							</td>
+							</tr>
+						</tbody></table>
+						</td>
+					</tr>
+					</tbody>
+					</table>
+			</td>
+			<td class="mega">
+					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<tbody>
+						<tr>
+							<td>
+								<p>Post by <a href="http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/username.html">UserName</a></p>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							<p class="center"><b>Claim needs to go here</b></p>
+							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
 							</td>
 						</tr>
 					</tbody>
@@ -109,6 +174,9 @@
 							<td>
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
 							</td>
 						</tr>
 					</tbody>
@@ -146,6 +214,50 @@
 							<td>
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
+							</td>
+						</tr>
+					</tbody>
+					</table>		
+					<table class="center">
+					<tbody><tr>
+						<td>
+						<table width="100%">
+							<tbody><tr>
+							<td align="left">
+								<button type="button" class="red" name="disagree">Disagree</button> 
+							</td>
+							<td align="center">
+								<button type="button" class="yellow" name="unsure">Unsure</button> 
+							</td>
+							<td align="right">
+								<button type="button" class="green" name="convinced">Convinced</button> 
+							</td>
+							</tr>
+						</tbody></table>
+						</td>
+					</tr>
+					</tbody>
+					</table>
+			</td>
+			<td class="mega">
+					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<tbody>
+						<tr>
+							<td>
+								<p>Post by <a href="http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/username.html">UserName</a></p>
+								
+							</td>
+						</tr>
+						<tr>
+							<td>
+							<p class="center"><b>Claim needs to go here</b></p>
+							<p class="center"><i>Assertion needs to go here</i></p>
+							<p>Convinced: 0<br>
+								Unsure:    0<br>
+								Disagree:  0</p>
 							</td>
 						</tr>
 					</tbody>
