--- a/voting.html
+++ b/voting.html
@@ -41,7 +41,7 @@
 	<table class="mega">
 		<tr>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -49,7 +49,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td> <!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
@@ -81,7 +81,7 @@
 					</table>
 			</td>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -89,7 +89,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td> <!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
@@ -121,7 +121,7 @@
 					</table>
 			</td>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -129,7 +129,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td> <!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
@@ -163,7 +163,7 @@
 		</tr>
 		<tr>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -171,7 +171,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td class="red"> <!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
@@ -203,7 +203,7 @@
 					</table>
 			</td>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -211,7 +211,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td class="yellow"><!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
@@ -243,7 +243,7 @@
 					</table>
 			</td>
 			<td class="mega">
-					<table class="center" class="<!--TODO make this dynamic change class between colors depending on vote-->">
+					<table class="center">
 					<tbody>
 						<tr>
 							<td>
@@ -252,7 +252,7 @@
 							</td>
 						</tr>
 						<tr>
-							<td>
+							<td class="green"><!--TODO make this dynamic change class between colors depending on vote-->
 							<p class="center"><b>Claim needs to go here</b></p>
 							<p class="center"><i>Assertion needs to go here</i></p>
 							<p>Convinced: 0<br>
