--- a/voting.html
+++ b/voting.html
@@ -5,9 +5,9 @@
 <title>Derporia: the never-ending land of claims</title>
 
 <!-- A project by James Dressel and James Robertson -->
-<link rel="stylesheet" type="text/css" media="screen" href="derporiaVotingStyle.css">
+<link rel="stylesheet" type="text/css" media="screen" href="http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/Derporia64/derporiaVotingStyle.css" />
 
-<script src="derporiaVoting.js"> </script>
+<script src="http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/Derporia64/derporiaVoting.js" /> </script>
 </head>
 
 	<body>
