--- a/admin.html
+++ b/admin.html
@@ -1,2 +1,19 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<meta charset="UTF-8">
+<title>SUPER SEKRET ADMIN PAGE</title>
+
+<!-- A project by James Dressel and James Robertson -->
+<link rel="stylesheet" type="text/css" href="adminStyle.css"/><!--http://apps-swe432.vse.gmu.edu:8080/swe432/jsp/jdressel/Derporia64/derporiaStyle.css-->
+
+</head>
+<body>
+
+<p>
+This is the admin page.  Congratulations, you must be an uber 1337 haxor
+</p>
+
+</body>
 </html>
