add old style sheet

--- a/admin.html
+++ b/admin.html
@@ -12,8 +12,11 @@
 <body>
 
 <p>
-This is the admin page.  Congratulations, you must be an uber 1337 haxor
+This is the admin page.  Congratulations, you must be an uber 1337 haxor<br/>
+Current Sessions:
 </p>
+<br/>
+
 
 </body>
 </html>
